titre formulaire bonjour visiteur

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-	<h1>Hello, <span id="username">stranger</span></h1>
+	<h1>Hello, <span id="username">Stranger</span></h1>
 	<div>
 		<label for="first_name">First Name</label>
 		<input type="text" name="first_name" id="first_name">
@@ -19,6 +19,7 @@
 		<label for="city">City</label>
 		<input type="text" name="city" id="city">
 	</div>
+	<button>ok</button>
 	<script src="jquery-3.1.1.js"></script>
 	<script src="app.js"></script>
 </body>
